--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "ip": "1.1.5",
+    "nodemailer": "^4.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^6.4.2",
@@ -31,6 +32,7 @@
     "express-session": "Работа с сессиями в express",
     "chalk": "необходимо для подсветки текста в консоли",
     "ip": "необходимо для определения ip адреса машины",
+    "nodemailer": "smtp отправка почты",
     "passport": "нужен для авторизации пользователя",
     "passport-local": "стратегия для пасспорта, вход по логину и паролю",
     "sequelize": "orm для работы с реляционными бд",
