--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,4 +3,5 @@ var path = require('path')
 module.exports = {
   'config': path.resolve('configs/', 'database.json'),
   'migrations-path': path.resolve('src/', 'migrations'),
+  'seeders-path': path.resolve('src/', 'seeds'),
 }
