--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "migrate:up": "cross-env NODE_ENV=production sequelize db:migrate",
     "migrate:down": "cross-env NODE_ENV=production sequelize db:migrate:undo",
     "migrate:down:all": "cross-env NODE_ENV=production sequelize db:migrate:undo:all",
+    "seeds": "cross-env NODE_ENV=production sequelize db:seed:all",
     "db:reset": "npm run migrate:down:all && npm run migrate:up"
   },
   "scriptsComments": {
@@ -56,6 +57,7 @@
     "migrate:up": "накатывание миграций",
     "migrate:down": "откат последних миграций",
     "migrate:down:all": "откат всех последних миграций",
+    "seeds": "накатить всех сидов",
     "db:reset": "чистка базы"
   },
   "author": "",
