sync dev branch

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "migrate:down": "откат последних миграций",
     "migrate:down:all": "откат всех последних миграций",
     "seeds": "накатить всех сидов",
-    "db:reset": "чистка базы + сиды",
+    "db:reset": "чистка базы + сиды"
   },
   "author": "",
   "license": "MIT"
