--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "ip": "1.1.5",
+    "mkdirp": "^0.5.1",
+    "multer": "^1.3.0",
     "nodemailer": "^4.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
+    "randomstring": "^1.1.5",
     "sequelize": "^4.32.2",
     "sequelize-cli": "^3.2.0"
   },
@@ -32,8 +35,11 @@
     "express-session": "Работа с сессиями в express",
     "chalk": "необходимо для подсветки текста в консоли",
     "ip": "необходимо для определения ip адреса машины",
+    "mkdirp":"необходимо дл создания цепочки директорий",
     "nodemailer": "smtp отправка почты",
+    "multer": "необходимо для загрузки файлов на сервер",
     "passport": "нужен для авторизации пользователя",
+    "randomstring": "генерация рандомных строк",
     "passport-local": "стратегия для пасспорта, вход по логину и паролю",
     "sequelize": "orm для работы с реляционными бд",
     "sequelize-cli": "консольная утилита для генерации миграций модейлей и.т.д.",
