--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pg-hstore": "^2.3.2",
     "randomstring": "^1.1.5",
     "sequelize": "^4.32.2",
-    "sequelize-cli": "^3.2.0"
+    "sequelize-cli": "^3.2.0",
+    "socket.io": "^2.0.4"
   },
   "dependenciesComments": {
     "bcrypt-nodejs": "либа для хеширования пароля",
@@ -45,7 +46,8 @@
     "sequelize-cli": "консольная утилита для генерации миграций модейлей и.т.д.",
     "cross-env": "для установки env переменных при запуске скриптов",
     "pg": "обертка для postgres, предоставляет javascript api",
-    "pg-hstore": "для json представляения данных postgres"
+    "pg-hstore": "для json представляения данных postgres",
+    "socket.io": "работа с сокетами"
   },
   "scripts": {
     "start": "node src/index.js",
