--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
         "migrate:down": "cross-env NODE_ENV=production sequelize db:migrate:undo",
         "migrate:down:all": "cross-env NODE_ENV=production sequelize db:migrate:undo:all",
         "seeds": "cross-env NODE_ENV=production sequelize db:seed:all",
-        "db:reset": "npm run migrate:down:all && npm run migrate:up && npm run seeds",
-        "db:session": "psql $(cat .pg-session-db ) < node_modules/connect-pg-simple/table.sql"
+        "db:reset": "npm run migrate:down:all && npm run migrate:up && npm run seeds"
     },
     "scriptsComments": {
         "start": "стартует сервер",
@@ -77,8 +76,7 @@
         "migrate:down": "откат последних миграций",
         "migrate:down:all": "откат всех последних миграций",
         "seeds": "накатить всех сидов",
-        "db:reset": "чистка базы + сиды",
-        "db:session": "создание таблици для сессий в postgres"
+        "db:reset": "чистка базы + сиды"
     },
     "author": "",
     "license": "MIT"
