--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.16.2",
         "express-session": "^1.15.6",
         "ip": "1.1.5",
+        "lodash": "^4.17.5",
         "mkdirp": "^0.5.1",
         "multer": "^1.3.0",
         "nodemailer": "^4.4.2",
@@ -43,6 +44,7 @@
         "chalk": "необходимо для подсветки текста в консоли",
         "connect-pg-simple": "необходимо для хранения сессии в postgresql",
         "ip": "необходимо для определения ip адреса машины",
+        "lodash": "Работа с объектами, используется для того чтобы сделать сет из списка",
         "mkdirp": "необходимо дл создания цепочки директорий",
         "nodemailer": "smtp отправка почты",
         "multer": "необходимо для загрузки файлов на сервер",
