--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cross-env": "5.0.0",
         "ethereumjs-tx": "^1.3.3",
         "express": "^4.16.2",
+        "express-passport-logout": "^0.1.0",
         "express-session": "^1.15.6",
         "ip": "1.1.5",
         "lodash": "^4.17.5",
@@ -40,6 +41,7 @@
         "express": "фреймворк для nodeJs",
         "body-parser": "парсер тела запроса",
         "cookie-parser": "парсер кук",
+        "express-passport-logout": "Логаут",
         "express-session": "Работа с сессиями в express",
         "chalk": "необходимо для подсветки текста в консоли",
         "connect-pg-simple": "необходимо для хранения сессии в postgresql",
