--- a/configs/database.json.dist
+++ b/configs/database.json.dist
@@ -7,4 +7,13 @@
     "port": 5432,
     "dialect": "postgres"
   }
+  "test": {
+     "username": "postgres",
+     "password": "asdasd123",
+     "database": "emploreum",
+     "host": "localhost",
+     "port": 5432,
+      "dialect": "postgres",
+      "logging": false
+  }
 }
