--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dependencies": {
         "bcrypt-nodejs": "0.0.3",
         "body-parser": "^1.18.2",
+        "chai": "^3.5.0",
+        "chai-http": "^2.0.1",
         "chalk": "^1.1.3",
         "connect-pg-simple": "^4.2.1",
         "cookie-parser": "^1.4.3",
@@ -21,9 +23,11 @@
         "lodash": "^4.17.5",
         "minimist": "^1.2.0",
         "mkdirp": "^0.5.1",
+        "mocha": "^2.4.5",
         "multer": "^1.3.0",
         "nodemailer": "^4.4.2",
         "nodemon": "^1.14.12",
+        "object-hash": "^1.2.0",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "passport.socketio": "^3.7.0",
@@ -34,10 +38,7 @@
         "sequelize-cli": "^3.2.0",
         "socket.io": "^2.0.4",
         "truffle-contract": "^3.0.3",
-        "web3": "^1.0.0-beta.29",
-        "chai": "^3.5.0",
-        "chai-http": "^2.0.1",
-        "mocha": "^2.4.5"
+        "web3": "^1.0.0-beta.29"
     },
     "dependenciesComments": {
         "bcrypt-nodejs": "либа для хеширования пароля",
