add desc to package json

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "mkdirp": "необходимо дл создания цепочки директорий",
         "nodemailer": "smtp отправка почты",
         "multer": "необходимо для загрузки файлов на сервер",
+        "object-hash": "для создания хешей из обьектов",
         "passport": "нужен для авторизации пользователя",
         "randomstring": "генерация рандомных строк",
         "passport-local": "стратегия для пасспорта, вход по логину и паролю",
