--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "cross-env": "5.0.0",
         "ethereumjs-tx": "^1.3.3",
         "express": "^4.16.2",
+        "express-jsonschema": "^1.1.6",
         "express-session": "^1.15.6",
         "ip": "1.1.5",
         "lodash": "^4.17.5",
@@ -45,6 +46,7 @@
         "express": "фреймворк для nodeJs",
         "body-parser": "парсер тела запроса",
         "cookie-parser": "парсер кук",
+        "express-jsonschema": "Валидация параметров в запросе",
         "express-session": "Работа с сессиями в express",
         "chalk": "необходимо для подсветки текста в консоли",
         "connect-pg-simple": "необходимо для хранения сессии в postgresql",
