--- a/configs/file.json.dist
+++ b/configs/file.json.dist
@@ -1,5 +1,4 @@
 {
     "upload_dir": "public/upload",
-    "log_file": "logs/logs.txt",
-    "log_error_file": "logs/err.txt"
+    "log_dir": "logs"
 }
